fixed menu alignment

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -316,7 +316,7 @@ body {
 	text-decoration:none;
 }
 
-.header-notification {
+.notification {
     width:38px;
     height:38px;
     position:relative;
@@ -346,10 +346,12 @@ body {
 
 #last-social-btn {
     float:right;
-    margin-top:2px;
+    margin-top:21px;
 }
 
 #messages-btn {
+	display:block;
+	float:left;
     height:33px;
     width:36px;
     background-image:url('../app/images/messages-btn.png');
